--- a/custom-translations/ka.po
+++ b/custom-translations/ka.po
@@ -3,8 +3,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
-"POT-Creation-Date: 2020-02-21 09:46+0000\n"
-"PO-Revision-Date: 2020-02-21 09:46+0000\n"
+"POT-Creation-Date: 2020-02-25 10:15+0000\n"
+"PO-Revision-Date: 2020-02-25 10:15+0000\n"
 "Last-Translator: NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <EMAIL@ADDRESS>\n"
 "MIME-Version: 1.0\n"
@@ -12,133 +12,11 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
 
-msgid "Enter your email address or username."
-msgstr ""
-"შეიყვანეთ თქვენი "
-"ელ.ფოსტის მისამართი"
-
-msgid "Email or username"
-msgstr "შეიყვანეთ ელ.ფოსტა "
-
-msgid "Enter the password that accompanies your email address."
-msgstr "შეიყვანეთ პაროლი "
-
-msgid "Password"
-msgstr "პაროლი"
-
-msgid "Log in"
-msgstr "შესვლა"
-
-msgid "Add effect"
-msgstr "ეფექტის დამატება"
-
-msgid "Save configuration"
-msgstr "კონფიგურაციის შენახვა"
-
-msgid "Confirm"
-msgstr "დადასტურება"
-
-msgid "Filter"
-msgstr "ფილტრი"
-
-msgid "Submit"
-msgstr "დადასტურება"
-
-msgid "Search"
-msgstr "ძიება"
-
-msgid "Settings"
-msgstr "პარამეტრები"
-
-msgid "Upload"
-msgstr "ატვირთვა"
-
-msgid "Delete"
-msgstr "წაშლა"
-
-msgid "Remove"
-msgstr "ამოშლა"
-
-msgid "Add"
-msgstr "დამატება"
-
-msgid "Create"
-msgstr "შექმნა"
-
-msgid "Install"
-msgstr "დაყენება"
-
-msgid "Save"
-msgstr "შენახვა"
-
-msgid "Export"
-msgstr "ექსპორტი"
-
-msgid "Import"
-msgstr "იმპორტი"
-
-msgid "Update"
-msgstr "განახლება"
-
-msgid "Manage"
-msgstr "მართვა"
-
-msgid "Configure"
-msgstr "კონფიგურირება"
-
-msgid "Download"
-msgstr "გადმოტვირთვა"
-
-msgid "Edit"
-msgstr "რედაქტირება"
-
-msgid "Cancel"
-msgstr "გაუქმება"
-
-msgid "Block"
-msgstr "ბლოკი"
-
-msgid "Vocabulary"
-msgstr "ლექსიკონი"
+msgid "Forms"
+msgstr "ფორმები"
 
 msgid "Home"
 msgstr "მთავარი"
-
-msgid "Text format"
-msgstr "ტექსტის ფორმატი"
-
-msgid "Language"
-msgstr "ენა"
-
-msgid "Content type"
-msgstr "კონტენტის ტიპი"
-
-msgid "Menu"
-msgstr "მენიუ"
-
-msgid "Role"
-msgstr "როლი"
-
-msgid "Date format"
-msgstr "თარიღის ფორმატი"
-
-msgid "Create new account"
-msgstr "რეგისტრაცია"
-
-msgid "Reset your password"
-msgstr "პაროლის აღდგენა"
-
-msgid "Description"
-msgstr "აღწერა"
-
-msgid "Content"
-msgstr "კონტენტი"
-
-msgid "User"
-msgstr "მომხმარებელი"
-
-msgid "Forms"
-msgstr "ფორმები"
 
 msgid "User interface"
 msgstr "მომხმარებლის ინტერფეისი"
@@ -157,6 +35,9 @@ msgstr "მომხმარებელი"
 
 msgid "Pages"
 msgstr "გვერდები"
+
+msgid "Save configuration"
+msgstr "კონფიგურაციის შენახვა"
 
 msgid "delete"
 msgstr "წაშლა"
@@ -184,8 +65,17 @@ msgstr "სუფიქსი"
 msgid "Approve"
 msgstr "დადასტურება"
 
+msgid "Delete"
+msgstr "წაშლა"
+
+msgid "Submit"
+msgstr "დადასტურება"
+
 msgid "Operations"
 msgstr "ოპერაციები"
+
+msgid "Content"
+msgstr "კონტენტი"
 
 msgid "Attribute"
 msgstr "ატრიბუტი"
@@ -241,8 +131,23 @@ msgstr "ოპერაციები"
 msgid "disabled"
 msgstr "გამორთულია"
 
+msgid "Confirm"
+msgstr "დადასტურება"
+
+msgid "Cancel"
+msgstr "გაუქმება"
+
+msgid "Remove"
+msgstr "ამოშლა"
+
 msgid "Last comment"
 msgstr "ბოლო კომენტრარი"
+
+msgid "Description"
+msgstr "აღწერა"
+
+msgid "Language"
+msgstr "ენა"
 
 msgid "more"
 msgstr "მეტი"
@@ -309,6 +214,9 @@ msgstr "მთავარი გვერდი"
 msgid "Home page"
 msgstr "მთავარი გვერდი"
 
+msgid "Download"
+msgstr "გადმოტვირთვა"
+
 msgid "Version"
 msgstr "ვერსია"
 
@@ -336,6 +244,9 @@ msgstr "ფაილის მდებარეობა"
 msgid "Advanced options"
 msgstr "დამატებითი ოფციები"
 
+msgid "Edit"
+msgstr "რედაქტირება"
+
 msgid "Date"
 msgstr "თარიღი"
 
@@ -344,6 +255,9 @@ msgstr "ზომა"
 
 msgid "Links"
 msgstr "ბმულები"
+
+msgid "Search"
+msgstr "ძიება"
 
 msgid "Daily"
 msgstr "ყოველდღიური"
@@ -369,6 +283,9 @@ msgstr "შეტყობინება"
 msgid "Account Name"
 msgstr "მომხმარებლის სახელი"
 
+msgid "Password"
+msgstr "პაროლი"
+
 msgid "Block settings"
 msgstr "ბლოკის პარამეტრები"
 
@@ -390,9 +307,6 @@ msgstr "სურათი"
 msgid "Types"
 msgstr "ტიპები"
 
-msgid "Hierarchy"
-msgstr "იერარქია"
-
 msgid "Required"
 msgstr "სავალდებულო"
 
@@ -407,6 +321,9 @@ msgstr "კატეგორია"
 
 msgid "Add container"
 msgstr "კონტეინერის დამატება"
+
+msgid "Settings"
+msgstr "პარამეტრები"
 
 msgid "Name"
 msgstr "სახელი"
@@ -426,8 +343,14 @@ msgstr "მშობელ გვერდზე გადასვლა"
 msgid "Go to next page"
 msgstr "შემდეგ გვერდზე გადასვლა"
 
+msgid "Import"
+msgstr "იმპორტი"
+
 msgid "Book"
 msgstr "წიგნი"
+
+msgid "Export"
+msgstr "ექსპორტი"
 
 msgid "settings"
 msgstr "პარამეტრები"
@@ -446,6 +369,9 @@ msgstr "დახმარება"
 
 msgid "Image settings"
 msgstr "სურათის პარამეტრები"
+
+msgid "Update"
+msgstr "განახლება"
 
 msgid "Open"
 msgstr "ღია"
@@ -489,6 +415,9 @@ msgstr "ახლის დამატება"
 msgid "Time"
 msgstr "დრო"
 
+msgid "Add"
+msgstr "დამატება"
+
 msgid "Length"
 msgstr "სიგრძე"
 
@@ -531,6 +460,9 @@ msgstr "ფორუმის სახელი"
 msgid "forum"
 msgstr "ფორუმი"
 
+msgid "Manage"
+msgstr "მართვა"
+
 msgid "Refresh"
 msgstr "განახლება"
 
@@ -545,6 +477,9 @@ msgstr "ბმული"
 
 msgid "Display"
 msgstr "ჩვენება"
+
+msgid "Menu"
+msgstr "მენიუ"
 
 msgid "Advanced settings"
 msgstr "დამატებითი პარამეტრები"
@@ -582,6 +517,9 @@ msgstr "უცნობი"
 msgid "Attachment"
 msgstr "მიმაგრებული ფაილი"
 
+msgid "Upload"
+msgstr "ატვირთვა"
+
 msgid "Picture"
 msgstr "სურათი"
 
@@ -597,11 +535,20 @@ msgstr "შემდეგ"
 msgid "Database type"
 msgstr "მონაცემთა ბაზის ტიპი"
 
+msgid "User"
+msgstr "მომხმარებელი"
+
+msgid "Content type"
+msgstr "კონტენტის ტიპი"
+
 msgid "action"
 msgstr "ოპერაცია"
 
 msgid "Continue"
 msgstr "გაგრძელება"
+
+msgid "Configure"
+msgstr "კონფიგურირება"
 
 msgid "Email"
 msgstr "ელ. ფოსტა"
@@ -639,6 +586,9 @@ msgstr "შეტყობინების სათაური."
 msgid "Number of columns"
 msgstr "სვეტების რაოდენობა"
 
+msgid "Create"
+msgstr "შექმნა"
+
 msgid "Separator"
 msgstr "გამყოფი"
 
@@ -669,8 +619,8 @@ msgstr ""
 "კონტენტის ტიპი შვილობილი "
 "გვერდებისთვის"
 
-msgid "Active"
-msgstr "აქტიური"
+msgid "All"
+msgstr "ყველა"
 
 msgid "Done"
 msgstr "დასრულება"
@@ -684,11 +634,17 @@ msgstr "წვდომა აკრძალულია"
 msgid "Year"
 msgstr "წელი"
 
+msgid "Date format"
+msgstr "თარიღის ფორმატი"
+
 msgid "Add content"
 msgstr "კონტენტის დამატება"
 
 msgid "Page title"
 msgstr "გვერდის სათაური"
+
+msgid "Block"
+msgstr "ბლოკი"
 
 msgid "Override title"
 msgstr "სათაურის გადაწერა"
@@ -840,6 +796,9 @@ msgstr "გამოქვეყნებული"
 msgid "Signature"
 msgstr "ხელმოწერა"
 
+msgid "Filter"
+msgstr "ფილტრი"
+
 msgid "Location"
 msgstr "ადგილმდებარეობა"
 
@@ -854,6 +813,9 @@ msgstr "ფაილის MIME ტიპი"
 
 msgid "File size"
 msgstr "ფაილის ზომა"
+
+msgid "Vocabulary"
+msgstr "ლექსიკონი"
 
 msgid "Vocabulary ID"
 msgstr "ლექსიკონის ID"
@@ -1160,11 +1122,17 @@ msgstr "ლისტის ტიპი"
 msgid "Attributes"
 msgstr "ატრიბუტები"
 
+msgid "Role"
+msgstr "როლი"
+
 msgid "Select all"
 msgstr "ყველას მონიშვნა"
 
 msgid "User login"
 msgstr "მომხმარებლის ავტორიზაცია"
+
+msgid "Log in"
+msgstr "შესვლა"
 
 msgid "Link text"
 msgstr "ბმულის ტექსტი"
@@ -1215,6 +1183,9 @@ msgstr "ანონიმური"
 
 msgid "Provider"
 msgstr "პროვაიდერი"
+
+msgid "Install"
+msgstr "დაყენება"
 
 msgid "Save and edit"
 msgstr "შენახვა და რედაქტირება"
@@ -1272,6 +1243,11 @@ msgstr "კომენტარები"
 
 msgid "Full"
 msgstr "სრული"
+
+msgid "1 new"
+msgid_plural "@count new"
+msgstr[0] "1 ახალი"
+msgstr[1] "@count ახალი"
 
 msgid "Condition"
 msgstr "პირობა"
@@ -1886,6 +1862,9 @@ msgstr "დაიწერა"
 
 msgid "Hidden"
 msgstr "დამალული"
+
+msgid "Show"
+msgstr "ჩვენება"
 
 msgid "Site language"
 msgstr "საიტის ენა"
@@ -2550,8 +2529,8 @@ msgstr "გვერდი ვერ მოიძებნა"
 msgid "More help"
 msgstr "მეტი დახმარება"
 
-msgid "Add terms"
-msgstr "ტერმინების დამატება"
+msgid "Sizes"
+msgstr "ზომები"
 
 msgid "« first"
 msgstr "« პირველი"
@@ -2826,15 +2805,6 @@ msgstr "საიტის ინსტალაცია"
 msgid "Finish translations"
 msgstr "თარგმანის დასრულება"
 
-msgid ""
-"By default, dates in this site will be displayed in the chosen time "
-"zone."
-msgstr ""
-"ნაგულისხმევად, ამ საიტზე "
-"თარიღები გამოჩნდება "
-"არჩეული დროის სარტყლის "
-"შესაბამისად."
-
 msgid "Update notifications"
 msgstr "განახლების შეტყობინებები"
 
@@ -2895,6 +2865,9 @@ msgstr "@size YB"
 msgid "All messages"
 msgstr "ყველა შეტყობინება"
 
+msgid "Text format"
+msgstr "ტექსტის ფორმატი"
+
 msgid "The name of the site."
 msgstr "საიტის სახელი."
 
@@ -2952,6 +2925,9 @@ msgstr "სტილის სახელი"
 
 msgid "Update effect"
 msgstr "ეფექტის განახლება"
+
+msgid "Add effect"
+msgstr "ეფექტის დამატება"
 
 msgctxt "Long month name"
 msgid "January"
@@ -3064,62 +3040,6 @@ msgstr "მონაცემთა ბაზის სისტემა"
 
 msgid "Database system version"
 msgstr "მონაცემთა ბაზის ვერსია"
-
-msgid ""
-"A valid email address. All emails from the system will be sent to this "
-"address. The email address is not made public and will only be used if "
-"you wish to receive a new password or wish to receive certain news or "
-"notifications by email."
-msgstr ""
-"შეიყვანეთ თქვენი ელ.ფოსტა. "
-"ყველა შეტყობინება "
-"მოგივათ მითითებულ "
-"მისამართზე. ინფორმაცია "
-"კონფიდენციალურია და "
-"იქნება გამოყენებული "
-"მხოლოდ თქვენი "
-"სურვილისამებრ ახალი "
-"პაროლის და "
-"შეტყობინებების "
-"მისაღებად."
-
-msgid "Provide a password for the new account in both fields."
-msgstr "შეიყვანეთ პაროლი"
-
-msgid "Recommendations to make your password stronger:"
-msgstr ""
-"ძლიერი პაროლისთვის "
-"გაითვალისწინეთ:"
-
-msgid "Make it at least 12 characters"
-msgstr "გახადეთ 12 სიმბოლოზე მეტი"
-
-msgid "Add lowercase letters"
-msgstr ""
-"დაამატეთ დაბალი "
-"რეგისტრის ასოები"
-
-msgid "Add uppercase letters"
-msgstr ""
-"დაამატეთ მაღალი "
-"რეგისტრის ასოები "
-
-msgid "Add numbers"
-msgstr "დაამატეთ ციფრები"
-
-msgid "Add punctuation"
-msgstr "დაამატეთ სასვენი ნიშნები"
-
-msgid "Make it different from your username"
-msgstr ""
-"პაროლი არ უნდა ემთხვეოდეს "
-"მომხმარებლის სახელს"
-
-msgid "Weak"
-msgstr "სუსტი"
-
-msgid "Strong"
-msgstr "ძლიერი"
 
 msgid "Main navigation"
 msgstr "Main navigation"
@@ -3408,8 +3328,160 @@ msgstr ""
 "\r\n"
 "--  [site:name] team"
 
-msgid "All"
-msgstr "ყველა"
+msgid "Active"
+msgstr "აქტიური"
+
+msgid "Donation"
+msgstr "შემოწირულობა"
+
+msgid "There is no content"
+msgstr "კონტენტი არ არსებობს "
+
+msgid "Become a partner"
+msgstr "გახდი პარტნიორი"
+
+msgid "Fund the GIRCHI, get the relevant GeDs and hit the leaderboard"
+msgstr ""
+"დააფინანსე გირჩი, მიიღე "
+"შესაბამისი რაოდენობის "
+"GeD-ები და მოხვდი "
+"ლიდერბორდში"
+
+msgid "Donate"
+msgstr "დააფინანსე"
+
+msgid "Top partners"
+msgstr "ტოპ პარტნიორები"
+
+msgid "Top referrals"
+msgstr "ტოპ რეფერალები"
+
+msgid "Referrals"
+msgstr "რეფერალები"
+
+msgid "Referral benefits"
+msgstr "რეფერალური სარგებელი"
+
+msgid "Last month Top partners"
+msgstr "წინა თვის ტოპ პარტნიორები"
+
+msgid "Donated amount"
+msgstr "შემოწირული თანხა"
+
+msgid "Politicians rating"
+msgstr "პოლიტიკოსთა რეიტინგი"
+
+msgid "Full list"
+msgstr "სრული სია"
+
+msgid "Girchi"
+msgstr "გირჩი"
+
+msgid "Search..."
+msgstr "ძებნა..."
+
+msgid "More Freedom"
+msgstr "მეტი თავისუფლება"
+
+msgid ""
+"Your password has been successfully changed. Please log in into your "
+"account with new password."
+msgstr ""
+"თქვენი პაროლი წარმატებით "
+"შეიცვალა. გთხოვთ გაიაროთ "
+"ავტორიზაცია ახალი "
+"პაროლით."
+
+msgid "Enter your email address or username."
+msgstr ""
+"შეიყვანეთ თქვენი "
+"ელ.ფოსტის მისამართი"
+
+msgid "Email or username"
+msgstr "შეიყვანეთ ელ.ფოსტა "
+
+msgid "Enter the password that accompanies your email address."
+msgstr "შეიყვანეთ პაროლი "
+
+msgid "Save"
+msgstr "შენახვა"
+
+msgid "Create new account"
+msgstr "რეგისტრაცია"
+
+msgid "Reset your password"
+msgstr "პაროლის აღდგენა"
+
+msgid "Hierarchy"
+msgstr "იერარქია"
+
+msgid "Add terms"
+msgstr "ტერმინების დამატება"
+
+msgid ""
+"By default, dates in this site will be displayed in the chosen time "
+"zone."
+msgstr ""
+"ნაგულისხმევად, ამ საიტზე "
+"თარიღები გამოჩნდება "
+"არჩეული დროის სარტყლის "
+"შესაბამისად."
+
+msgid ""
+"A valid email address. All emails from the system will be sent to this "
+"address. The email address is not made public and will only be used if "
+"you wish to receive a new password or wish to receive certain news or "
+"notifications by email."
+msgstr ""
+"შეიყვანეთ თქვენი ელ.ფოსტა. "
+"ყველა შეტყობინება "
+"მოგივათ მითითებულ "
+"მისამართზე. ინფორმაცია "
+"კონფიდენციალურია და "
+"იქნება გამოყენებული "
+"მხოლოდ თქვენი "
+"სურვილისამებრ ახალი "
+"პაროლის და "
+"შეტყობინებების "
+"მისაღებად."
+
+msgid "Provide a password for the new account in both fields."
+msgstr "შეიყვანეთ პაროლი"
+
+msgid "Recommendations to make your password stronger:"
+msgstr ""
+"ძლიერი პაროლისთვის "
+"გაითვალისწინეთ:"
+
+msgid "Make it at least 12 characters"
+msgstr "გახადეთ 12 სიმბოლოზე მეტი"
+
+msgid "Add lowercase letters"
+msgstr ""
+"დაამატეთ დაბალი "
+"რეგისტრის ასოები"
+
+msgid "Add uppercase letters"
+msgstr ""
+"დაამატეთ მაღალი "
+"რეგისტრის ასოები "
+
+msgid "Add numbers"
+msgstr "დაამატეთ ციფრები"
+
+msgid "Add punctuation"
+msgstr "დაამატეთ სასვენი ნიშნები"
+
+msgid "Make it different from your username"
+msgstr ""
+"პაროლი არ უნდა ემთხვეოდეს "
+"მომხმარებლის სახელს"
+
+msgid "Weak"
+msgstr "სუსტი"
+
+msgid "Strong"
+msgstr "ძლიერი"
 
 msgid "News"
 msgstr "სიახლეები"
@@ -3421,9 +3493,6 @@ msgstr ""
 "პაროლის აღდგენის "
 "ინსტრუქციის სანახავად "
 "შეამოწმეთ თქვენი ელ.ფოსტა"
-
-msgid "Show"
-msgstr "ჩვენება"
 
 msgid "Current password"
 msgstr "მიმდინარე პაროლი"
@@ -3449,14 +3518,6 @@ msgstr ""
 "არასწორი სახელი ან პაროლი. "
 "<a href=\":password\">დაგავიწყდა "
 "პაროლი?</a>"
-
-msgid "1 new"
-msgid_plural "@count new"
-msgstr[0] "1 ახალი"
-msgstr[1] "@count ახალი"
-
-msgid "Sizes"
-msgstr "ზომები"
 
 msgid ""
 "Your current password is missing or incorrect; it's required to change "
@@ -3519,9 +3580,6 @@ msgid "Don't have an Girchi account? Register now"
 msgstr ""
 "არ გაქვთ ანგარიში? გაიარეთ "
 "რეგისტრაცია მარტივად"
-
-msgid "Girchi"
-msgstr "გირჩი"
 
 msgid ""
 "Select a politician, specify the percentage with which you support "
@@ -3589,9 +3647,6 @@ msgstr "ვიდეო ბლოგი"
 
 msgid "All videos"
 msgstr "ყველა ვიდეო"
-
-msgid "There is no content"
-msgstr "კონტენტი არ არსებობს "
 
 msgid "You must agree to the terms and conditions before register"
 msgstr ""
@@ -3721,32 +3776,10 @@ msgstr "გაიმეორეთ პაროლი"
 msgid "members in total"
 msgstr "წევრს შორის"
 
-msgid "More Freedom"
-msgstr "მეტი თავისუფლება"
-
 msgid "all rights reserved. Girchi"
 msgstr ""
 "ყველა უფლება დაცულია. "
 "გირჩი"
-
-msgid "Become a partner"
-msgstr "გახდი პარტნიორი"
-
-msgid "Fund the GIRCHI, get the relevant GeDs and hit the leaderboard"
-msgstr ""
-"დააფინანსე გირჩი, მიიღე "
-"შესაბამისი რაოდენობის "
-"GeD-ები და მოხვდი "
-"ლიდერბორდში"
-
-msgid "Donate"
-msgstr "დააფინანსე"
-
-msgid "Top partners"
-msgstr "ტოპ პარტნიორები"
-
-msgid "Full list"
-msgstr "სრული სია"
 
 msgid "Week"
 msgstr "კვირის"
@@ -3778,14 +3811,8 @@ msgstr ""
 msgid "ძებნა..."
 msgstr "Search..."
 
-msgid "Search..."
-msgstr "ძებნა..."
-
 msgid "All news"
 msgstr "ყველა სიახლე"
-
-msgid "Last month Top partners"
-msgstr "წინა თვის ტოპ პარტნიორები"
 
 msgid "Politicians"
 msgstr "პოლიტიკოსები"
@@ -3956,17 +3983,11 @@ msgstr "პოლიტიკური წონა"
 msgid "Politician Ged"
 msgstr "გამომუშავებული GED-ები"
 
-msgid "Referrals"
-msgstr "რეფერალები"
-
 msgid "Donate to politician"
 msgstr "დააფინანსე პოლიტიკოსი"
 
 msgid "Ged &#37;"
 msgstr "Ged-ების &#37;"
-
-msgid "Donation"
-msgstr "შემოწირულობა"
 
 msgid "Disposable"
 msgstr "ერთჯერადი"
@@ -4052,9 +4073,6 @@ msgstr "აირჩიეთ სურათი"
 msgid "Choose cover photo"
 msgstr "აირჩიეთ გარეკანის ფოტო"
 
-msgid "Politicians rating"
-msgstr "პოლიტიკოსთა რეიტინგი"
-
 msgid "Party list weight"
 msgstr "პარტიული წონა"
 
@@ -4092,9 +4110,6 @@ msgstr ""
 
 msgid "Favorite Video"
 msgstr "ფავორიტი ვიდეო"
-
-msgid "Donated amount"
-msgstr "შემოწირული თანხა"
 
 msgid "Next payment date"
 msgstr "მომდევნო გადახდის თარიღი"
@@ -4207,9 +4222,6 @@ msgstr ""
 msgid "Transaction history"
 msgstr "გადახდების ისტორია"
 
-msgid "Top referrals"
-msgstr "ტოპ რეფერალები"
-
 msgid "You can't be your own referral"
 msgstr ""
 "თქვენ ვერ გახდებით თქვენი "
@@ -4217,9 +4229,6 @@ msgstr ""
 
 msgid "Enter your referral person"
 msgstr "მიუთითე ვისი რეფერალი ხარ"
-
-msgid "Referral benefits"
-msgstr "რეფერალური სარგებელი"
 
 msgid "Referral transactions"
 msgstr "რეფერალური ტრანზაქციები"
@@ -4230,32 +4239,48 @@ msgstr "- აირჩიეთ მიზანი - "
 msgid "- Select politician -"
 msgstr "- აირჩიეთ პოლიტიკოსი - "
 
-msgid ""
-"Your password has been successfully changed. Please log in into your "
-"account with new password"
+msgid "Please select politician or aim"
 msgstr ""
-"თქვენი პაროლი წარმატებით "
-"შეიცვალა. გთხოვთ გაიაროთ "
-"ავტორიზაცია ახალი "
-"პაროლით."
+"გთხოვთ აირჩიოთ მიზანი ან "
+"პოლიტიკოსი"
 
-msgid ""
-"Your password has been successfully changed. Please log in into your "
-"account with new password."
-msgstr ""
-"თქვენი პაროლი წარმატებით "
-"შეიცვალა. გთხოვთ გაიაროთ "
-"ავტორიზაცია ახალი "
-"პაროლით."
+msgid "Please enter amount"
+msgstr "გთხოვთ შეიყვანოთ თანხა"
 
 msgid "My credit cards"
 msgstr "ჩემი ბარათები"
 
-msgid "Execution date"
-msgstr "ჩამოჭრის თარიღი"
+msgid "Add lowercase letters"
+msgid_plural "@count new"
+msgstr[0] "1 ახალი"
+msgstr[1] "@count ახალი"
+
+msgid "My cards"
+msgstr "ჩემი ბარათები"
+
+msgid "Aim/Politician"
+msgstr "მიზანი/პოლიტიკოსი"
+
+msgid "Select card for regular payment"
+msgstr ""
+"აირჩეთ ბარათი ავტომატური "
+"დაფინანსებისთვის"
 
 msgid "Delete card"
 msgstr "ბარათის წაშლა"
+
+msgid "Credit car was successfully saved"
+msgstr ""
+"ბარათი წარმატებით "
+"დაემატა"
+
+msgid "Regular donation was created"
+msgstr ""
+"რეგულარული დონაცია "
+"წარმატებით შეიქმნა"
+
+msgid "Execution date"
+msgstr "ჩამოჭრის თარიღი"
 
 msgid "Regular donation was successfully updated"
 msgstr ""
@@ -4276,45 +4301,37 @@ msgstr ""
 "რომელიც მოცემულ ბარათზეა "
 "მიბმული"
 
-msgid "My cards"
-msgstr "ჩემი ბარათები"
-
-msgid "Credit car was successfully saved"
-msgstr ""
-"ბარათი წარმატებით "
-"დაემატა"
-
 msgid "Card %s %s was deleted"
 msgstr "ბარათი %s %s წაიშალა"
 
-msgid "Aim/Politician"
-msgstr "მიზანი/პოლიტიკოსი"
-
-msgid "Select card for regular payment"
+msgid ""
+"Your password has been successfully changed. Please log in into your "
+"account with new password"
 msgstr ""
-"აირჩეთ ბარათი ავტომატური "
-"დაფინანსებისთვის"
-
-msgid "Regular donation was created"
-msgstr ""
-"რეგულარული დონაცია "
-"წარმატებით შეიქმნა"
-
-msgid "Add lowercase letters"
-msgid_plural "@count new"
-msgstr[0] "1 ახალი"
-msgstr[1] "@count ახალი"
-
-msgid "Please select politician or aim"
-msgstr ""
-"გთხოვთ აირჩიოთ მიზანი ან "
-"პოლიტიკოსი"
-
-msgid "Please enter amount"
-msgstr "გთხოვთ შეიყვანოთ თანხა"
+"თქვენი პაროლი წარმატებით "
+"შეიცვალა. გთხოვთ გაიაროთ "
+"ავტორიზაცია ახალი "
+"პაროლით."
 
 msgid "Currency"
 msgstr "ვალუტა"
+
+msgid "You can't be your referral's referral."
+msgstr ""
+"თქვენ ვერ გახდებით თქვენი "
+"რეფერალის რეფერალი"
+
+msgid "Join Group"
+msgstr "გაწევრიანდი ჯგუფში"
+
+msgid "Aim or politician"
+msgstr "მიზანი ან პოლიტიკოსი"
+
+msgid "Join Partners"
+msgstr "გაწევრიანდი პარტნიორებში"
+
+msgid "Please choose the Politician"
+msgstr "აირჩიეთ პოლიტიკოსი"
 
 msgid "I agree on publicity"
 msgstr "თანახმა ვარ საჯაროობაზე"
@@ -4329,25 +4346,8 @@ msgstr ""
 "მონიშნული უნდა გქონდეთ "
 "\"თანახმა ვარ საჯაროობაზე\"."
 
-msgid "Join Group"
-msgstr "გაწევრიანდი ჯგუფში"
-
-msgid "You can't be your referral's referral."
-msgstr ""
-"თქვენ ვერ გახდებით თქვენი "
-"რეფერალის რეფერალი"
-
-msgid "Join Partners"
-msgstr "გაწევრიანდი პარტნიორებში"
-
-msgid "Join Group"
-msgstr "გაწევრიანდი ჯგუფში"
-
 msgid "Please choose Donation aim"
 msgstr ""
 "აირჩიეთ დაფინანსების "
 "მიზანი"
-
-msgid "Please choose the Politician"
-msgstr "აირჩიეთ პოლიტიკოსი"
 
