Translate error message when user handle field is not unique. refs #708

--- a/custom-translations/ka.po
+++ b/custom-translations/ka.po
@@ -3,8 +3,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
-"POT-Creation-Date: 2020-02-25 10:15+0000\n"
-"PO-Revision-Date: 2020-02-25 10:15+0000\n"
+"POT-Creation-Date: 2020-06-03 21:20+0000\n"
+"PO-Revision-Date: 2020-06-03 21:20+0000\n"
 "Last-Translator: NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <EMAIL@ADDRESS>\n"
 "MIME-Version: 1.0\n"
@@ -243,12 +243,6 @@ msgstr "გამორთულია"
 
 msgid "Last comment"
 msgstr "ბოლო კომენტრარი"
-
-msgid "Description"
-msgstr "აღწერა"
-
-msgid "Language"
-msgstr "ენა"
 
 msgid "more"
 msgstr "მეტი"
@@ -495,9 +489,6 @@ msgstr "ახლის დამატება"
 msgid "Time"
 msgstr "დრო"
 
-msgid "Add"
-msgstr "დამატება"
-
 msgid "Length"
 msgstr "სიგრძე"
 
@@ -555,9 +546,6 @@ msgstr "ბმული"
 msgid "Display"
 msgstr "ჩვენება"
 
-msgid "Menu"
-msgstr "მენიუ"
-
 msgid "Advanced settings"
 msgstr "დამატებითი პარამეტრები"
 
@@ -608,12 +596,6 @@ msgstr "შემდეგ"
 
 msgid "Database type"
 msgstr "მონაცემთა ბაზის ტიპი"
-
-msgid "User"
-msgstr "მომხმარებელი"
-
-msgid "Content type"
-msgstr "კონტენტის ტიპი"
 
 msgid "action"
 msgstr "ოპერაცია"
@@ -702,17 +684,11 @@ msgstr "წვდომა აკრძალულია"
 msgid "Year"
 msgstr "წელი"
 
-msgid "Date format"
-msgstr "თარიღის ფორმატი"
-
 msgid "Add content"
 msgstr "კონტენტის დამატება"
 
 msgid "Page title"
 msgstr "გვერდის სათაური"
-
-msgid "Block"
-msgstr "ბლოკი"
 
 msgid "Override title"
 msgstr "სათაურის გადაწერა"
@@ -878,9 +854,6 @@ msgstr "ფაილის MIME ტიპი"
 
 msgid "File size"
 msgstr "ფაილის ზომა"
-
-msgid "Vocabulary"
-msgstr "ლექსიკონი"
 
 msgid "Vocabulary ID"
 msgstr "ლექსიკონის ID"
@@ -1186,9 +1159,6 @@ msgstr "ლისტის ტიპი"
 
 msgid "Attributes"
 msgstr "ატრიბუტები"
-
-msgid "Role"
-msgstr "როლი"
 
 msgid "Select all"
 msgstr "ყველას მონიშვნა"
@@ -2925,9 +2895,6 @@ msgstr "@size YB"
 msgid "All messages"
 msgstr "ყველა შეტყობინება"
 
-msgid "Text format"
-msgstr "ტექსტის ფორმატი"
-
 msgid "The name of the site."
 msgstr "საიტის სახელი."
 
@@ -3441,160 +3408,6 @@ msgstr ""
 "\r\n"
 "--  [site:name] team"
 
-msgid "Active"
-msgstr "აქტიური"
-
-msgid "Donation"
-msgstr "შემოწირულობა"
-
-msgid "There is no content"
-msgstr "კონტენტი არ არსებობს "
-
-msgid "Become a partner"
-msgstr "გახდი პარტნიორი"
-
-msgid "Fund the GIRCHI, get the relevant GeDs and hit the leaderboard"
-msgstr ""
-"დააფინანსე გირჩი, მიიღე "
-"შესაბამისი რაოდენობის "
-"GeD-ები და მოხვდი "
-"ლიდერბორდში"
-
-msgid "Donate"
-msgstr "დააფინანსე"
-
-msgid "Top partners"
-msgstr "ტოპ პარტნიორები"
-
-msgid "Top referrals"
-msgstr "ტოპ რეფერალები"
-
-msgid "Referrals"
-msgstr "რეფერალები"
-
-msgid "Referral benefits"
-msgstr "რეფერალური სარგებელი"
-
-msgid "Last month Top partners"
-msgstr "წინა თვის ტოპ პარტნიორები"
-
-msgid "Donated amount"
-msgstr "შემოწირული თანხა"
-
-msgid "Politicians rating"
-msgstr "პოლიტიკოსთა რეიტინგი"
-
-msgid "Full list"
-msgstr "სრული სია"
-
-msgid "Girchi"
-msgstr "გირჩი"
-
-msgid "Search..."
-msgstr "ძებნა..."
-
-msgid "More Freedom"
-msgstr "მეტი თავისუფლება"
-
-msgid ""
-"Your password has been successfully changed. Please log in into your "
-"account with new password."
-msgstr ""
-"თქვენი პაროლი წარმატებით "
-"შეიცვალა. გთხოვთ გაიაროთ "
-"ავტორიზაცია ახალი "
-"პაროლით."
-
-msgid "Enter your email address or username."
-msgstr ""
-"შეიყვანეთ თქვენი "
-"ელ.ფოსტის მისამართი"
-
-msgid "Email or username"
-msgstr "შეიყვანეთ ელ.ფოსტა "
-
-msgid "Enter the password that accompanies your email address."
-msgstr "შეიყვანეთ პაროლი "
-
-msgid "Save"
-msgstr "შენახვა"
-
-msgid "Create new account"
-msgstr "რეგისტრაცია"
-
-msgid "Reset your password"
-msgstr "პაროლის აღდგენა"
-
-msgid "Hierarchy"
-msgstr "იერარქია"
-
-msgid "Add terms"
-msgstr "ტერმინების დამატება"
-
-msgid ""
-"By default, dates in this site will be displayed in the chosen time "
-"zone."
-msgstr ""
-"ნაგულისხმევად, ამ საიტზე "
-"თარიღები გამოჩნდება "
-"არჩეული დროის სარტყლის "
-"შესაბამისად."
-
-msgid ""
-"A valid email address. All emails from the system will be sent to this "
-"address. The email address is not made public and will only be used if "
-"you wish to receive a new password or wish to receive certain news or "
-"notifications by email."
-msgstr ""
-"შეიყვანეთ თქვენი ელ.ფოსტა. "
-"ყველა შეტყობინება "
-"მოგივათ მითითებულ "
-"მისამართზე. ინფორმაცია "
-"კონფიდენციალურია და "
-"იქნება გამოყენებული "
-"მხოლოდ თქვენი "
-"სურვილისამებრ ახალი "
-"პაროლის და "
-"შეტყობინებების "
-"მისაღებად."
-
-msgid "Provide a password for the new account in both fields."
-msgstr "შეიყვანეთ პაროლი"
-
-msgid "Recommendations to make your password stronger:"
-msgstr ""
-"ძლიერი პაროლისთვის "
-"გაითვალისწინეთ:"
-
-msgid "Make it at least 12 characters"
-msgstr "გახადეთ 12 სიმბოლოზე მეტი"
-
-msgid "Add lowercase letters"
-msgstr ""
-"დაამატეთ დაბალი "
-"რეგისტრის ასოები"
-
-msgid "Add uppercase letters"
-msgstr ""
-"დაამატეთ მაღალი "
-"რეგისტრის ასოები "
-
-msgid "Add numbers"
-msgstr "დაამატეთ ციფრები"
-
-msgid "Add punctuation"
-msgstr "დაამატეთ სასვენი ნიშნები"
-
-msgid "Make it different from your username"
-msgstr ""
-"პაროლი არ უნდა ემთხვეოდეს "
-"მომხმარებლის სახელს"
-
-msgid "Weak"
-msgstr "სუსტი"
-
-msgid "Strong"
-msgstr "ძლიერი"
 msgid "All"
 msgstr "ყველა"
 
@@ -3707,6 +3520,9 @@ msgstr ""
 "არ გაქვთ ანგარიში? გაიარეთ "
 "რეგისტრაცია მარტივად"
 
+msgid "Girchi"
+msgstr "გირჩი"
+
 msgid ""
 "Select a politician, specify the percentage with which you support "
 "him/her and take part in establishing the party listing."
@@ -3773,6 +3589,9 @@ msgstr "ვიდეო ბლოგი"
 
 msgid "All videos"
 msgstr "ყველა ვიდეო"
+
+msgid "There is no content"
+msgstr "კონტენტი არ არსებობს "
 
 msgid "You must agree to the terms and conditions before register"
 msgstr ""
@@ -3902,10 +3721,32 @@ msgstr "გაიმეორეთ პაროლი"
 msgid "members in total"
 msgstr "წევრს შორის"
 
+msgid "More Freedom"
+msgstr "მეტი თავისუფლება"
+
 msgid "all rights reserved. Girchi"
 msgstr ""
 "ყველა უფლება დაცულია. "
 "გირჩი"
+
+msgid "Become a partner"
+msgstr "გახდი პარტნიორი"
+
+msgid "Fund the GIRCHI, get the relevant GeDs and hit the leaderboard"
+msgstr ""
+"დააფინანსე გირჩი, მიიღე "
+"შესაბამისი რაოდენობის "
+"GeD-ები და მოხვდი "
+"ლიდერბორდში"
+
+msgid "Donate"
+msgstr "დააფინანსე"
+
+msgid "Top partners"
+msgstr "ტოპ პარტნიორები"
+
+msgid "Full list"
+msgstr "სრული სია"
 
 msgid "Week"
 msgstr "კვირის"
@@ -3937,8 +3778,14 @@ msgstr ""
 msgid "ძებნა..."
 msgstr "Search..."
 
+msgid "Search..."
+msgstr "ძებნა..."
+
 msgid "All news"
 msgstr "ყველა სიახლე"
+
+msgid "Last month Top partners"
+msgstr "წინა თვის ტოპ პარტნიორები"
 
 msgid "Politicians"
 msgstr "პოლიტიკოსები"
@@ -4109,6 +3956,9 @@ msgstr "პოლიტიკური წონა"
 msgid "Politician Ged"
 msgstr "გამომუშავებული GED-ები"
 
+msgid "Referrals"
+msgstr "რეფერალები"
+
 msgid "Donate to politician"
 msgstr "დააფინანსე პოლიტიკოსი"
 
@@ -4202,6 +4052,9 @@ msgstr "აირჩიეთ სურათი"
 msgid "Choose cover photo"
 msgstr "აირჩიეთ გარეკანის ფოტო"
 
+msgid "Politicians rating"
+msgstr "პოლიტიკოსთა რეიტინგი"
+
 msgid "Party list weight"
 msgstr "პარტიული წონა"
 
@@ -4240,8 +4093,8 @@ msgstr ""
 msgid "Favorite Video"
 msgstr "ფავორიტი ვიდეო"
 
-msgid "Next payment date"
-msgstr "მომდევნო გადახდის თარიღი"
+msgid "Donated amount"
+msgstr "შემოწირული თანხა"
 
 msgid "Next payment date"
 msgstr "მომდევნო გადახდის თარიღი"
@@ -4354,6 +4207,9 @@ msgstr ""
 msgid "Transaction history"
 msgstr "გადახდების ისტორია"
 
+msgid "Top referrals"
+msgstr "ტოპ რეფერალები"
+
 msgid "You can't be your own referral"
 msgstr ""
 "თქვენ ვერ გახდებით თქვენი "
@@ -4361,6 +4217,9 @@ msgstr ""
 
 msgid "Enter your referral person"
 msgstr "მიუთითე ვისი რეფერალი ხარ"
+
+msgid "Referral benefits"
+msgstr "რეფერალური სარგებელი"
 
 msgid "Referral transactions"
 msgstr "რეფერალური ტრანზაქციები"
@@ -4371,48 +4230,32 @@ msgstr "- აირჩიეთ მიზანი - "
 msgid "- Select politician -"
 msgstr "- აირჩიეთ პოლიტიკოსი - "
 
-msgid "Please select politician or aim"
+msgid ""
+"Your password has been successfully changed. Please log in into your "
+"account with new password"
 msgstr ""
-"გთხოვთ აირჩიოთ მიზანი ან "
-"პოლიტიკოსი"
+"თქვენი პაროლი წარმატებით "
+"შეიცვალა. გთხოვთ გაიაროთ "
+"ავტორიზაცია ახალი "
+"პაროლით."
 
-msgid "Please enter amount"
-msgstr "გთხოვთ შეიყვანოთ თანხა"
+msgid ""
+"Your password has been successfully changed. Please log in into your "
+"account with new password."
+msgstr ""
+"თქვენი პაროლი წარმატებით "
+"შეიცვალა. გთხოვთ გაიაროთ "
+"ავტორიზაცია ახალი "
+"პაროლით."
 
 msgid "My credit cards"
 msgstr "ჩემი ბარათები"
 
-msgid "Add lowercase letters"
-msgid_plural "@count new"
-msgstr[0] "1 ახალი"
-msgstr[1] "@count ახალი"
-
-msgid "My cards"
-msgstr "ჩემი ბარათები"
-
-msgid "Aim/Politician"
-msgstr "მიზანი/პოლიტიკოსი"
-
-msgid "Select card for regular payment"
-msgstr ""
-"აირჩეთ ბარათი ავტომატური "
-"დაფინანსებისთვის"
+msgid "Execution date"
+msgstr "ჩამოჭრის თარიღი"
 
 msgid "Delete card"
 msgstr "ბარათის წაშლა"
-
-msgid "Credit car was successfully saved"
-msgstr ""
-"ბარათი წარმატებით "
-"დაემატა"
-
-msgid "Regular donation was created"
-msgstr ""
-"რეგულარული დონაცია "
-"წარმატებით შეიქმნა"
-
-msgid "Execution date"
-msgstr "ჩამოჭრის თარიღი"
 
 msgid "Regular donation was successfully updated"
 msgstr ""
@@ -4433,17 +4276,42 @@ msgstr ""
 "რომელიც მოცემულ ბარათზეა "
 "მიბმული"
 
+msgid "My cards"
+msgstr "ჩემი ბარათები"
+
+msgid "Credit car was successfully saved"
+msgstr ""
+"ბარათი წარმატებით "
+"დაემატა"
+
 msgid "Card %s %s was deleted"
 msgstr "ბარათი %s %s წაიშალა"
 
-msgid ""
-"Your password has been successfully changed. Please log in into your "
-"account with new password"
+msgid "Aim/Politician"
+msgstr "მიზანი/პოლიტიკოსი"
+
+msgid "Select card for regular payment"
 msgstr ""
-"თქვენი პაროლი წარმატებით "
-"შეიცვალა. გთხოვთ გაიაროთ "
-"ავტორიზაცია ახალი "
-"პაროლით."
+"აირჩეთ ბარათი ავტომატური "
+"დაფინანსებისთვის"
+
+msgid "Regular donation was created"
+msgstr ""
+"რეგულარული დონაცია "
+"წარმატებით შეიქმნა"
+
+msgid "Add lowercase letters"
+msgid_plural "@count new"
+msgstr[0] "1 ახალი"
+msgstr[1] "@count ახალი"
+
+msgid "Please select politician or aim"
+msgstr ""
+"გთხოვთ აირჩიოთ მიზანი ან "
+"პოლიტიკოსი"
+
+msgid "Please enter amount"
+msgstr "გთხოვთ შეიყვანოთ თანხა"
 
 msgid "Currency"
 msgstr "ვალუტა"
@@ -4453,36 +4321,11 @@ msgstr ""
 "თქვენ ვერ გახდებით თქვენი "
 "რეფერალის რეფერალი"
 
-msgid "Join Group"
-msgstr "გაწევრიანდი ჯგუფში"
-
-msgid "Aim or politician"
-msgstr "მიზანი ან პოლიტიკოსი"
-
-msgid "Join Partners"
-msgstr "გაწევრიანდი პარტნიორებში"
-
-msgid "Please choose the Politician"
-msgstr "აირჩიეთ პოლიტიკოსი"
-
-msgid "You can't be your referral's referral."
-msgstr ""
-"თქვენ ვერ გახდებით თქვენი "
-"რეფერალის რეფერალი"
-
 msgid "Join Partners"
 msgstr "გაწევრიანდი პარტნიორებში"
 
 msgid "Join Group"
 msgstr "გაწევრიანდი ჯგუფში"
-
-msgid "Please choose Donation aim"
-msgstr ""
-"აირჩიეთ დაფინანსების "
-"მიზანი"
-
-msgid "Please choose the Politician"
-msgstr "აირჩიეთ პოლიტიკოსი"
 
 msgid "I agree on publicity"
 msgstr "თანახმა ვარ საჯაროობაზე"
@@ -4497,15 +4340,30 @@ msgstr ""
 "მონიშნული უნდა გქონდეთ "
 "\"თანახმა ვარ საჯაროობაზე\"."
 
+msgid "Benefits"
+msgstr "სარგებელი"
+
+msgid "Aim or politician"
+msgstr "მიზანი ან პოლიტიკოსი"
+
+msgid "Please choose the Politician"
+msgstr "აირჩიეთ პოლიტიკოსი"
+
 msgid "Please choose Donation aim"
 msgstr ""
 "აირჩიეთ დაფინანსების "
 "მიზანი"
-msgid "Benefits"
-msgstr "სარგებელი"
 
 msgid "Notifications"
 msgstr "შეტყობინებები"
 
 msgid "Notifications page"
 msgstr "შეტყობინებების გვერდი"
+
+msgid "The field @field_label has to be unique."
+msgstr ""
+"თქვენი არჩეული "
+"მნიშვნელობა ველისთვის "
+"@field_label, უკვე დაკავებულია "
+"სხვა მომხმარებლის მიერ."
+
