--- a/custom-translations/ka.po
+++ b/custom-translations/ka.po
@@ -3,8 +3,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
-"POT-Creation-Date: 2020-06-15 11:22+0000\n"
-"PO-Revision-Date: 2020-06-15 11:22+0000\n"
+"POT-Creation-Date: 2020-07-20 14:34+0000\n"
+"PO-Revision-Date: 2020-07-20 14:34+0000\n"
 "Last-Translator: NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <EMAIL@ADDRESS>\n"
 "MIME-Version: 1.0\n"
@@ -4337,4 +4337,9 @@ msgid "Send request to administration to earn this badge"
 msgstr ""
 "ბეჯის მოსაპოვებლად "
 "გაგზავნეთ მოთხოვნა"
+
+msgid "Party list is temporarily closed."
+msgstr ""
+"პარტიული სია დროებით "
+"დაკეტილია"
 
