--- a/custom-translations/ka.po
+++ b/custom-translations/ka.po
@@ -3,8 +3,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
-"POT-Creation-Date: 2020-07-27 13:29+0000\n"
-"PO-Revision-Date: 2020-07-27 13:29+0000\n"
+"POT-Creation-Date: 2020-09-09 11:24+0000\n"
+"PO-Revision-Date: 2020-09-09 11:24+0000\n"
 "Last-Translator: NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <EMAIL@ADDRESS>\n"
 "MIME-Version: 1.0\n"
@@ -1188,9 +1188,9 @@ msgid ""
 "@site is currently under maintenance. We should be back shortly. Thank "
 "you for your patience."
 msgstr ""
-"@site დროებით გამორთულია. "
-"ჩვენ მალე დავბრუნდებით, "
-"გმადლობთ მოთმინებისთის."
+"მიმდინარეობს ხმების "
+"დათვლა, მადლობას გიხდით "
+"მოთმინებისთვის."
 
 msgid "Default front page"
 msgstr "მთავარი გვერდი"
@@ -4384,13 +4384,18 @@ msgstr ""
 "ბეჯის მოსაპოვებლად "
 "გაგზავნეთ მოთხოვნა"
 
+msgid "I want to be a politician is temporarly disabled"
+msgstr ""
+"პოლიტიკოსობის მონიშნვა "
+"დროებით გამორთულია"
 
 msgid "Party list is temporarily closed."
 msgstr ""
 "პარტიული სია დროებით "
 "დაკეტილია"
 
-msgid "I want to be a politician is temporarly disabled"
+msgid "You can't change your referral"
 msgstr ""
-"პოლიტიკოსობის მონიშნვა "
-"დროებით გამორთულია"
+"რეფერალის შეცვლა დროებით "
+"გამორთულია."
+
